Change env variable names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=registration_system
+      - FRONTEND_URL=localhost:3000
   # frontend:
 
 
